--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   email_validator: ^2.0.1
   image_picker: ^0.8.4+2
   flutter_launcher_icons: ^0.9.2
+  carousel_slider: ^4.0.0
+  flutter_speed_dial: ^4.5.0
 
 dev_dependencies:
   flutter_test:
