--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   carousel_slider: ^4.0.0
   flutter_speed_dial: ^4.5.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
