--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_speed_dial: ^4.5.0
   fluttertoast: ^8.0.8
+  qr_code_scanner: ^0.5.2
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
