--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   fluttertoast: ^8.0.8
   qr_code_scanner: ^0.5.2
   uuid: ^3.0.4
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
